# parse_mediawiki_dump

./: Cargo.toml  readme.md
src/: lib.rs
tests/: main.rs
