[package]
name = "parse_mediawiki_dump_reboot"
version = "1.0.3"
edition = "2021"
authors = [
    "Fredrik Portström <https://portstrom.com>",
    "Olivier ROLAND <newca12@users.noreply.github.com>",
    "Yves Bastide <2929444+ybastide@users.noreply.github.com>",
]
description = "Parse XML dumps exported from Mediawiki"
keywords = ["mediawiki"]
categories = ["parsing", "text-processing"]
license = "MIT"
readme = "readme.md"
repository = "https://github.com/ybastide/parse_mediawiki_dump"

[dependencies]
bzip2 = "0.4.4"
quick-xml = "0.36.1"
serde = { version = "1.0.188", features = ["derive"] }

[[example]]
name = "main"
